--- a/pages/about.html
+++ b/pages/about.html
@@ -9,9 +9,9 @@
         
         <div id = "header">
             <ul>
-                <li><a href="/AfricaShortStories/index.html">Home</a></li>
-                <li><a href="/pages/about.html">About</a></li>
-                <li><a href="/pages/stories.html">Stories</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="stories.html">Stories</a></li>
             </ul>
 
         </div>
