--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
         <div id = "header">
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class ="active"><a href="about.html">About</a></li>
                 <li><a href="stories.html">Stories</a></li>
             </ul>
 
