addded stories the files

--- a/pages/story10.html
+++ b/pages/story10.html
@@ -25,9 +25,14 @@
                 <li><a href="story9.html">Previous</a></li>
                 <li><a href="#">END</a></li>
             </ul>
-        </div>
-
+        </div>   
         
+        <div id = "content">
+             <div class = "title">Huveane</div>
+               <p>In many African stories, Huveane is the first man, while in others he is portrayed as a conniving deity. For the Basotho and Bavenda peoples of Lesotho, South Africa, he is their creator. After the creation of the earth and the heavens, Huveane wanted to enjoy some peace and quiet while proudly admiring his handiwork. Unfortunately, that was about the same time that humans taught themselves about the birds and the bees. </p>
+
+               <p>This was great for them, but all the noise was too loud for Huveane. In an unusual fashion, Huveane ascended into the heavens by driving pegs into it and climbing to the top. As he climbed he removed each peg so that no human would ever follow him.</p>
+        </div>
     
     <footer></footer>
     </body> 
