--- a/pages/story2.html
+++ b/pages/story2.html
@@ -26,6 +26,12 @@
                 <li><a href="story3.html">Next</a></li>
             </ul>
         </div>
+        <div id = "content">
+             <div class = "title">The Magic Of The Lovedu Rain Queens</div>
+               <p>To the Lovedu people of Mpumalanga, South Africa, the Rain Queen is a fundamental part of their culture and history. Called Mudjadji, the queen is said to be a living incarnation of the rain goddess. As she is the embodiment of rain, even her state of mind is said to influence the weather. .</p>
+
+               <p>The Mudjadji is also believed to be able to send storms to destroy the Lovedu’s enemies or gentle rain to nurture their friends. Every year, the Rain Queen’s powers are displayed at the Ga-Modjadji settlement during the rainmaking ceremony. The queens are all expected to commit suicide by poison at the age of 60. On that day, all of the queen’s rainmaking ingredients, prized objects, and incantations kept secret throughout her reign are passed on to her successor</p>
+        </div>
 
         
     
