--- a/pages/story3.html
+++ b/pages/story3.html
@@ -27,8 +27,13 @@
             </ul>
         </div>
 
+        <div id = "content">
+             <div class = "title">Anansi</div>
+               <p>The exploits of Anansi, West Africa’s great trickster-god, are described in hundreds of folktales. Usually in the form of a spider, his stories mainly deal with his attempts at fooling humans into stealing or doing something immoral that would benefit him in some way. These attempts normally fail miserably, teaching the listeners various life lessons. </p>
+
+               <p>One tale tells of his attempt to hoard the entire world’s wisdom into a pot for himself. When he succeeded, he attempted to hide the pot at the top of a tree where nobody could find it. He tied the pot in front of him and tried to climb the tree, but progress was slow as he kept sliding and losing his grip. His son, who had followed him, finally asked him why he didn’t tie the pot to his back so that he could climb more easily. As he realized his son’s ingenuity, the pot slipped and fell to the ground. The wisdom fell out and a sudden rainstorm washed it into the river and from there to the waters of the ocean, so that everyone in the world now owns a little bit of it.</p>
+        </div>
         
-    
     <footer></footer>
     </body> 
 </html>
