--- a/pages/story4.html
+++ b/pages/story4.html
@@ -27,6 +27,12 @@
             </ul>
         </div>
 
+        <div id = "content">
+             <div class = "title">Kalunga</div>
+               <p>In an Angolan folktale, death is explained like this: heartbroken after the death of his favorite wife Muhungu, Chief Kitamba ordered his people not to speak or eat until she could be brought back to life. The headmen of the tribe asked a medicine man to fetch the queen from Kalunga (the world of the dead). The medicine man ordered all the people of the village to wash themselves with infused herbs and shortly afterwards, descended into the land of the dead with his son.</p>
+
+               <p>Following a road, the man soon encountered the queen. She showed him Kalunga-ngombe, the lord of the underworld, and explained that he devours everyone in the end. She also pointed to a shadowy figure in chains—the spirit of Chief Kitamba, who was destined to die soon. Giving him a funerary bracelet as proof of his encounter, the queen sent the medicine man back, telling him that no one who entered Kalunga could ever leave and that he shouldn’t eat any of the food or speak of Kitamba’s impending death. Otherwise, he and his son would both be forced to stay in the underworld. When he returned, he presented the chief with the bracelet, and the chief confirmed that it was indeed that of Muhungu</p>
+        </div>
         
     
     <footer></footer>
