--- a/pages/story5.html
+++ b/pages/story5.html
@@ -27,6 +27,15 @@
             </ul>
         </div>
 
+        <div id = "content">
+             <div class = "title">The Hippopotamus </div>
+            <p>This remarkable African mammal is usually featured as a goddess in African legends. Worshiped in ancient Egypt as Tawaret, the goddess of fertility and childbirth, she was essentially regarded as a protective and caring deity.</p>
+
+            <p>In Mozambique, the Ronga people tell the legend of a mother who left her child with Mother Hippo for safekeeping as the child’s life was threatened by an envious rival. Every night, Mother Hippo would emerge with the child so that it could suckle from its mother.
+            </p>
+
+            <p>On the other hand, male hippopotami are usually seen as shape-shifting beasts. According to the legend of the hero Fara Maka, one such beast ate all the crops in the fields. The hero threw all his spears and sent black hounds against it, but the monster continued eating and could only be subdued and killed after a spell was placed on it by the hero’s wife.</p>
+        </div>
         
     
     <footer></footer>
