--- a/pages/story7.html
+++ b/pages/story7.html
@@ -27,6 +27,12 @@
             </ul>
         </div>
 
+        <div id = "content">
+             <div class = "title">The Biloko</div>
+               <p>The Biloko are diabolical dwarf-like entities believed to roam the nethermost regions of the rainforest in central Zaire. According to the legends, these beings are restless ancestor spirits who still harbor resentment toward the living. </p>
+
+               <p>They zealously guard the forest and its living creatures from the hollow trees in which they hide. Women lose consciousness at the sight of them and only the most daring hunters enter these forests and survive. Apart from their hideous appearance—no hair, long sharp claws, and sharp-toothed mouths that can open wide enough to swallow a human being whole—they also have a tendency to bewitch and eat all those who come under their spell.</p>
+        </div>
         
     
     <footer></footer>
