--- a/pages/story8.html
+++ b/pages/story8.html
@@ -27,7 +27,12 @@
             </ul>
         </div>
 
-        
+        <div id = "content">
+             <div class = "title">Adu Ogyinae</div>
+               <p>According to Akan mythology, all humans lived deep within the earth. One day, seven men, five women, a leopard, and a dog crawled out of a hole made by a massive worm. Looking around them, the astonished people became terrified, but Adu Ogyinae—the first man on the surface—seemed to understand the world and its wonders.</p>
+
+               <p>He calmed them and gave them strength by laying his hands on them. Adu Ogyinae also took charge and grouped the people into work teams. He coordinated the building of their first shelters until a tree he was chopping down fell on and killed him. </p>
+        </div>
     
     <footer></footer>
     </body> 
