--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="pages/about.html">About</a></li>
-                <li><a href="pages/stories.html">Stories</a></li>
+                <li><a href="pages/stories.html">Stories dfdf</a></li>
             </ul>
 
         </div>
